--- a/blockly/blockly.html
+++ b/blockly/blockly.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="en.js"></script>
     <script type="text/javascript" src="ru.js"></script>
     <script type="text/javascript" src="de.js"></script>
+    <script type="text/javascript" src="hu.js"></script>
     <script type="text/javascript" src="javascript_compressed.js"></script>
     <script type="text/javascript" src="blockly_espruino.js"></script>
     <script type="text/javascript" src="blockly_menu.js"></script>
